force-app/main/default/objects/maps__AdvRouteSettings__c/maps__AdvRouteSettings__c.object-meta.xml
<CustomObject>
    <description>This object will hold the settings used for Advanced Routes</description>
    <label>Maps Advanced Route Settings</label>
    <nameField>
        <label>Maps Advanced Route Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>