force-app/main/default/objects/maps__AdvRouteSettings__c/fields/maps__AvailableRouteTypes__c.field-meta.xml
<CustomField>
    <fullName>maps__AvailableRouteTypes__c</fullName>
    <description>These are the selected route types</description>
    <label>Available Route Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteDurationTypes</valueSetName>
    </valueSet>
</CustomField>