force-app/main/default/objects/maps__AdvRouteSettings__c/fields/maps__DefaultWorkingHours__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultWorkingHours__c</fullName>
    <description>This is the default working hours for all users</description>
    <label>Default Working Hours</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>