force-app/main/default/objects/maps__AdvRouteSettings__c/fields/maps__OAuthUser__c.field-meta.xml
<CustomField>
    <fullName>maps__OAuthUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the last user that was oauthed</description>
    <label>OAuth User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AdvRouteSettings</relationshipName>
    <type>Lookup</type>
</CustomField>